feat: Todos os metodos pagarMe funcionando
